# CAOS

./: .gitignore  README.md  TODO.txt
examples/: meson.build
examples/include/: meson.build
examples/src/: colorized_output_from_child.c  compile.sh  meson.build  pty_example.c
examples/tests/: meson.build
genconfig/: genconfig.py  generate_config.sh  generate_test_config.sh
zeus/: bi.sh  bta.sh  buildAndInstall.sh  buildAndTestAll.sh  meson.build  runTestInGDB.sh  setDebugMode.sh  setReleaseMode.sh
zeus/include/: config.h.in  filesystem.h  log.h  low_parallel_start.h  meson.build  processes.h  run.h  runlevel_utils.h  screen_print.h  script_config.h  serial_start.h  toml.h
zeus/src/: config.h  config.h.in  filesistem.c  filesistem.h  filesystem.c  log.c  low_parallel_start.c  main.c  meson.build  processes.c  run.c  runlevel_utils.c  screen_print.h  script_config.c  serial_start.c  serial_start.h  toml.c
zeus/tests/: filesystem.c  log.c  low_parallel_start.c  meson.build  runlevel_utils.c  screen_print.c  test_waitpid.c  test_waitpid_aux.c
zeus/tests/fake_etc/caos/init/: allmonth.toml  autumn.toml
zeus/tests/fake_etc/init.d/: allmonth.sh  autumn.sh  spring.sh  summer.sh  winter.sh
zeus/tests/fake_etc/rc4.d/: S01spring  S01spring.sh  S03winter
zeus/tests/fake_etc/rc5.d/: empty_dir.txt
zeus/tests/fake_etc/rcS.d/: S01summer.sh  S02autumn.sh
zeus/tests/fake_init.d/: S01_zeus_script_1.sh  S02_zeus_script_2.sh
zeus/tests/fake_init.d/init.d/: allmonth.sh  spring.sh  summer.sh  winter.sh
zeus/tests/fake_init.d/rc2.d/: K01spring  S03winter
zeus/tests/fake_init.d/rc4.d/: K01summer  K02autumn  K03winter  S02autumn
zeus/tests/fake_init.d/rcS.d/: S01allmonth.sh
zeus/tests/run/: leeme.txt
zeus/tests/run/sendsigs.omit.d/: leeme.txt  zeus
